test_suite/tests/ui/conflict/flatten-skip-deserializing.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
struct Foo {
    #[serde(flatten, skip_deserializing)]
    other: Other,
}

#[derive(Deserialize)]
struct Other {
    x: u32,
}

fn main() {}
